feat: add static portfolio structure (HTML/CSS/JS)

--- a/index.html
+++ b/index.html
@@ -1,1 +1,51 @@
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Praneeth | Portfolio</title>
+    <meta name="description" content="Praneeth's developer portfolio" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet" />
+    <link rel="stylesheet" href="assets/css/style.css" />
+  </head>
+  <body>
+    <header class="site-header">
+      <div class="container">
+        <h1 class="hero-title">Hi, I'm <span class="accent">Praneeth Jairam</span> </h1>
+        <p class="subtitle">AI & ML Engineering UnderGrad - Application Developer </p>
+        <nav class="socials">
+          <a aria-label="GitHub" href="https://github.com/praneeth-jairam-79130b31a" target="_blank" rel="noopener noreferrer">GitHub</a>
+          <a aria-label="LinkedIn" href="https://www.linkedin.com/in/praneeth-jairam-79130b31a" target="_blank" rel="noopener noreferrer">LinkedIn</a>
+          <a aria-label="Email" href="mailto:saipraneethjairam@gmail.com">Email</a>
+        </nav>
+      </div>
+    </header>
 
+    <main>
+      <section id="projects" class="projects-section container">
+        <h2 class="section-title">Projects</h2>
+        <div class="projects-grid" id="projectsGrid"></div>
+      </section>
+
+      <section id="skills" class="skills-section container">
+        <h2 class="section-title">Skills</h2>
+        <ul class="chip-list" id="skillsList"></ul>
+      </section>
+
+      <section id="contact" class="contact-section container">
+        <h2 class="section-title">Contact</h2>
+  <p>Have an opportunity or just want to say hi? <a href="mailto:saipraneethjairam@gmail.com" class="accent">Reach out</a>.</p>
+      </section>
+    </main>
+
+    <footer class="site-footer">
+      <div class="container">
+        <small id="footerYear"></small>
+      </div>
+    </footer>
+
+    <script src="assets/js/app.js"></script>
+  </body>
+</html>
