--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <h1 class="hero-title">Hi, I'm <span class="accent">Praneeth Jairam</span> </h1>
         <p class="subtitle">AI & ML Engineering UnderGrad - Application Developer </p>
         <nav class="socials">
-          <a aria-label="GitHub" href="https://github.com/praneeth-jairam-79130b31a" target="_blank" rel="noopener noreferrer">GitHub</a>
+          <a aria-label="GitHub" href="https://github.com/praneeeethcodes" target="_blank" rel="noopener noreferrer">GitHub</a>
           <a aria-label="LinkedIn" href="https://www.linkedin.com/in/praneeth-jairam-79130b31a" target="_blank" rel="noopener noreferrer">LinkedIn</a>
           <a aria-label="Email" href="mailto:saipraneethjairam@gmail.com">Email</a>
         </nav>
